fixing medium alerts